--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,10 @@
 
+spring:
+  application:
+    name:config-dev
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
